infrastructure/kubernetes/glance/glance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - glance.k3s.milliways.fi
    secretName: glance-tls
  rules:
  - host: glance.k3s.milliways.fi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glance
            port:
              number: 8080
